form redesign - added Button component - added useFormControls custom hook

--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -21,7 +21,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.15;
-  background-color: #fafafa;
+  background-color: #F8FBFF;
 }
 
 [tabindex="-1"]:focus {
