refactor global state and ui with antd

--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+.ant-form-item {
+  margin-bottom: 4px;
+}
+
+.anticon {
+  vertical-align: 0;
+}
+
 html {
   font-family: 'Ubuntu', sans-serif;
   line-height: 1.15;
