refactor: sidebar, page intro, theme

--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -3,7 +3,13 @@
 *::after {
   box-sizing: border-box;
 }
-
+.ant-layout {
+  background: inherit;
+}
+.ant-row {
+  margin-left: 0!important;
+  margin-right: 0!important;
+}
 .ant-form-item {
   margin-bottom: 4px;
 }
