--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -3,23 +3,33 @@
 *::after {
   box-sizing: border-box;
 }
+
 .ant-layout {
   background: inherit;
 }
+
 .ant-row {
-  margin-left: 0!important;
+  margin-left: 0 !important;
   margin-right: 0;
 }
+
 .ant-form-item {
-  margin-bottom: 4px;
+  margin-bottom: 12px;
+  .ant-form-item {
+    margin-bottom: 0;
+  }
 }
 
 .anticon {
   vertical-align: 0;
 }
 
+.ant-form-item-label > label {
+  color: #fff;
+}
+
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -39,7 +49,7 @@ section {
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   background-color: #121212;
   color: #fff;
@@ -49,7 +59,9 @@ body {
   min-height: 100%;
 }
 
-[tabindex='-1']:focus {
+// RESET STYLES
+
+[tabindex="-1"]:focus {
   outline: 0 !important;
 }
 
@@ -187,30 +199,30 @@ select {
 }
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   padding: 0;
   border-style: none;
 }
 
-input[type='radio'],
-input[type='checkbox'] {
+input[type="radio"],
+input[type="checkbox"] {
   box-sizing: border-box;
   padding: 0;
 }
 
-input[type='date'],
-input[type='time'],
-input[type='datetime-local'],
-input[type='month'] {
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="month"] {
   -webkit-appearance: listbox;
 }
 
